@@ -1,3 +1,11 @@
+2003-06-10  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclBasic.c:
+	* generic/tclExecute.c: let TclExecuteObjvInternal call
+	TclInterpReady instead of relying on its callers to do so; fix for
+	the part of [Bug 495830] that is new in 8.4. 
+	* tests/interp.test: Added tests 18.9 (knownbug) and 18.10
+
 2003-06-09  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tcl.decls:  Ported the changes from the
